fix: calculate partner advances from the full purchase pricing total